REOPENED296037
[Web Automation] Events may be dispatched to incorrect frame due to stale state
https://bugs.webkit.org/show_bug.cgi?id=296037
Summary [Web Automation] Events may be dispatched to incorrect frame due to stale state
Lily Spiniolas
Reported 2025-07-16 00:39:54 PDT
Attachments
Lily Spiniolas
Comment 1 2025-07-16 01:53:51 PDT
EWS
Comment 2 2025-07-18 12:35:15 PDT
Committed 297613@main (76080cf19e9d): <https://commits.webkit.org/297613@main> Reviewed commits have been landed. Closing PR #48109 and removing active labels.
Alexey Proskuryakov
Comment 3 2025-08-20 16:55:26 PDT
This is being reverted in bug 297670.
Note You need to log in before you can comment on or make changes to this bug.