[Web Automation] Events may be dispatched to incorrect frame due to stale state https://bugs.webkit.org/show_bug.cgi?id=296037 rdar://155933183

Reviewed by BJ Burg and Abrar Rahman Protyasha.

WebAutomationSessionProxy::focusFrame now takes an optional frameID instead of
a frameID, and focuses the main frame if frameID is not set. The method is
now called by WebAutomationSession::switchToBrowsingContext even when frameID
is empty so that focus is explicitly returned to the main frame.

At least one WPT test is known to have been affected by this bug when run via
webdriver: pointerevent_click_is_a_pointerevent.html?mouse has a failing subtest
as a result. With these changes, this test now completely passes.

* Source/WebKit/UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::switchToBrowsingContext):
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::focusFrame):
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.h:
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.messages.in:

Canonical link: https://commits.webkit.org/297613@main